--- a/View/CommentWindow.xaml
+++ b/View/CommentWindow.xaml
@@ -23,37 +23,6 @@
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-        <StackPanel HorizontalAlignment="Stretch" 
-                    Height="Auto" 
-                    MinHeight="61"
-                    Grid.Column="0"
-                    Grid.Row="0"
-                    Margin="10,22,0,0" 
-                    VerticalAlignment="Stretch" 
-                    MinWidth="420"
-                    Width="Auto">
-            <Label Content="Автор комментария:"
-               HorizontalAlignment="Left" 
-               VerticalContentAlignment="Top"
-               Margin="10,0,0,0"
-               HorizontalContentAlignment="Left"
-               FontSize="12" 
-               VerticalAlignment="Top"
-                   MinHeight="25"
-                   MinWidth="123"
-               Height="Auto" 
-               Width="Auto"/>
-            <TextBox Height="Auto" TextWrapping="Wrap"
-                     TextChanged="AuthorBox_TextChanged"
-                     Grid.Row="0"
-                     HorizontalAlignment="Left"
-                     Grid.Column="0"
-                     Text="{Binding AuthorName, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
-                     Margin="12,0,25,0"
-                     MinWidth="380"
-                     Width="Auto"
-                     FontSize="12"/>
-        </StackPanel>
         <StackPanel Grid.Column="1" 
                     HorizontalAlignment="Left" 
                     MinHeight="265"
@@ -99,19 +68,63 @@
             </ListBox>
         </StackPanel>
         <StackPanel HorizontalAlignment="Left" 
+                    Height="255" 
+                    Margin="10,10,10,10" 
+                    Orientation="Horizontal"
+                    Grid.RowSpan="2" 
+                    VerticalAlignment="Top" 
+                    Width="Auto">
+            <StackPanel HorizontalAlignment="Left" 
+                    Height="Auto" 
+                    Margin="0,0,10,10" 
+                    Orientation="Vertical"
+                    Grid.RowSpan="2" 
+                    VerticalAlignment="Top" 
+                    Width="Auto">
+                <StackPanel HorizontalAlignment="Stretch" 
+                    Height="Auto" 
+                    MinHeight="61"
+                    Grid.Column="0"
+                    Grid.Row="0"
+                    Margin="0,0,0,0" 
+                    VerticalAlignment="Stretch" 
+                    MinWidth="380"
+                    Width="Auto">
+                    <Label Content="Автор комментария:"
+               HorizontalAlignment="Left" 
+               VerticalContentAlignment="Top"
+               Margin="0,0,0,0"
+               HorizontalContentAlignment="Left"
+               FontSize="12" 
+               VerticalAlignment="Top"
+               MinHeight="25"
+               MinWidth="123"
+               Height="Auto" 
+               Width="Auto"/>
+                    <TextBox Height="Auto" TextWrapping="Wrap"
+                     TextChanged="AuthorBox_TextChanged"
+                     HorizontalAlignment="Left"
+                     Text="{Binding AuthorName, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                     Margin="0,0,0,0"
+                     MinWidth="380"
+                     Width="Auto"
+                     FontSize="12"/>
+                </StackPanel>
+                <StackPanel HorizontalAlignment="Left" 
                     MinHeight="130"
                     Height="Auto" 
-                    Margin="10,10,0,0" 
+                    Margin="0,0,0,0" 
+                    Grid.Column="0"
                     Grid.Row="1" 
                     VerticalAlignment="Top" 
                     MinWidth="420"
                     Width="Auto">
-            <Label Content="Kомментарий:" 
+                    <Label Content="Kомментарий:" 
                HorizontalAlignment="Left" 
                Grid.Row="1"
                Grid.Column="0"
                VerticalContentAlignment="Top"
-               Margin="10,0,0,0"
+               Margin="0,0,0,0"
                HorizontalContentAlignment="Left"
                FontSize="12" 
                VerticalAlignment="Top" 
@@ -119,41 +132,39 @@
                    MinHeight="25"
                Height="Auto" 
                Width="Auto"/>
-            <TextBox Height="Auto"
-                     MinHeight="100"
+                <TextBox Height="Auto"
+                 MinHeight="100"
                  TextWrapping="Wrap"
                  AcceptsReturn="True"
                  TextChanged="CommentBox_TextChanged"
-                 Grid.Row="1"
-                 Grid.Column="0"
                  HorizontalAlignment="Left"
                  Text="{Binding UserComment,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                  Width="Auto"
-                     MinWidth="380"
-                 Margin="12,0,25,0"/>
-        </StackPanel>
-        <StackPanel HorizontalAlignment="Left" 
+                 MinWidth="380"
+                 Margin="0,0,0,0"/>
+                </StackPanel>
+                <StackPanel HorizontalAlignment="Left" 
                     MinHeight="48"
                     Height="Auto" 
                     Orientation="Horizontal"
                     FlowDirection="LeftToRight"
-                    Margin="10,144,0,0" 
+                    Margin="0,0,0,0" 
                     Grid.Row="1" 
                     VerticalAlignment="Top" 
-                    MinWidth="448"
+                    MinWidth="420"
                     Width="Auto">
-            <Button Content="ОК"
+                    <Button Content="ОК"
                     Name="OkButton"
                     MinHeight="26"
                     IsEnabled="{Binding OkIsEnabled, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                     IsDefault="True"
                     Command="{Binding OKCommand}"
                     Height="Auto"
-                    Margin="268,0,0,22"
+                    Margin="200,0,0,0"
                     VerticalAlignment="Center"
                     MinWidth="80"
                     Width="Auto"/>
-            <Button Content="Отмена"
+                    <Button Content="Отмена"
                     Name="CancelButton"
                     IsCancel="True"
                     MinHeight="26"
@@ -162,42 +173,45 @@
                     VerticalAlignment="Center"
                     MinWidth="80" 
                     Width="Auto"
-                    Margin="20,0,0,22"/>
-        </StackPanel>
-        <StackPanel HorizontalAlignment="Left" 
-                    MinHeight="206"
-                    Height="Auto" 
-                    Margin="408,22,0,0" 
+                    Margin="20,0,0,0"/>
+                </StackPanel>
+            </StackPanel>
+            <StackPanel HorizontalAlignment="Left" 
+                    Height="255" 
+                    Grid.Column="0"
+                    Margin="0,0,0,0" 
+                    Orientation="Vertical"
+                    Grid.RowSpan="2" 
                     VerticalAlignment="Top" 
-                    MinWidth="73"
-                    Width="Auto" 
-                    Grid.RowSpan="2">
-            <Button Height="Auto"
-                    MaxWidth="30"
-                    MinHeight="30"
-                    MinWidth="30"
-                    Width="Auto"
-                    IsEnabled="{Binding ShowAuthorsListButton, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
-                    Command="{Binding ShowAuthorsListCommand}"
-                    Margin="0,20,22,0">
-                <Image Source="{Binding TopButtonIcon,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" 
-                       VerticalAlignment="Center" 
-                       HorizontalAlignment="Center"
-                       Height="20"/>
-            </Button>
-            <Button Width="Auto"
-                    MaxWidth="30"
-                    MinWidth="30"
-                    MinHeight="30"
-                    Height="Auto"
-                    IsEnabled="{Binding ShowCommentsListButton, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    Command="{Binding ShowCommentsListCommand}"
-                    Margin="0,46,22,0">
-                <Image Source="{Binding BottomButtonIcon,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
-                       VerticalAlignment="Center" 
-                       HorizontalAlignment="Center"
-                       Height="20"/>
-            </Button>
+                    Width="40">
+                <Button Height="Auto"
+                        MaxWidth="30"
+                        MinHeight="30"
+                        MinWidth="30"
+                        MaxHeight="30"
+                        Width="Auto"
+                        IsEnabled="{Binding ShowAuthorsListButton,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                        Command="{Binding ShowAuthorsListCommand}"
+                        Margin="0,20,0,0">
+                    <Image Source="{Binding TopButtonIcon,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Center"
+                           Height="20"/>
+                </Button>
+                <Button Width="Auto"
+                        MaxWidth="30"
+                        MinWidth="30"
+                        MinHeight="30"
+                        Height="Auto"
+                        IsEnabled="{Binding ShowCommentsListButton,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                        Command="{Binding ShowCommentsListCommand}"
+                        Margin="0,40,0,0">
+                    <Image Source="{Binding BottomButtonIcon,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Center"
+                           Height="20"/>
+                </Button>
+            </StackPanel>
         </StackPanel>
     </Grid>
 </Window>
